--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
 
     <script>
       // Get the current year for the coppy right
-      $('#year').text(new Date().getFullYear());
+      $("#year").text(new Date().getFullYear());
     </script>
   </body>
 </html>
