register+change alert

--- a/public/index.html
+++ b/public/index.html
@@ -47,10 +47,12 @@
       integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
       crossorigin="anonymous"
     ></script>
+    <!-- sweet alert -->
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
     <script>
       // Get the current year for the coppy right
-      $('#year').text(new Date().getFullYear());
+      $("#year").text(new Date().getFullYear());
     </script>
   </body>
 </html>
